--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,11 @@ dependencies:
   shared_preferences:
   mime:
   syncfusion_flutter_pdfviewer: ^19.1.69-beta
+
+  firebase_core:
+  firebase_messaging:
+  flutter_local_notifications:
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
